--- a/patchnotes/4.2.4.md
+++ b/patchnotes/4.2.4.md
@@ -27,5 +27,5 @@
 - Meeting > Sorting in various menus: Fixed a bug where file listings in agenda items, motions and elections were not sorted alphabetically.
 - Meeting > Settings: Fixed a bug in which indented settings were not saved if the topmost setting was changed at the same time.
 
-- ### Note
+### Note
 - Meeting > Projector > Detailed view > PDF files Scrolling behavior: New scroll buttons added. The scrolling behavior of the new buttons is not yet final and will be revised in the next update.
