--- a/i18n/template-en.pot
+++ b/i18n/template-en.pot
@@ -133,6 +133,9 @@ msgstr ""
 msgid "Activate amendments"
 msgstr ""
 
+msgid "Activate backtracking"
+msgstr ""
+
 msgid "Activate closed meeting"
 msgstr ""
 
@@ -307,6 +310,9 @@ msgid "All votes will be lost."
 msgstr ""
 
 msgid "Allow amendments of amendments"
+msgstr ""
+
+msgid "Allow backtracking of forwarded motions"
 msgstr ""
 
 msgid "Allow blank in number"
@@ -529,7 +535,7 @@ msgstr ""
 msgid "Are you sure you want to delete this motion block?"
 msgstr ""
 
-msgid "Are you sure you want to delete this motion? "
+msgid "Are you sure you want to delete this motion?"
 msgstr ""
 
 msgid "Are you sure you want to delete this projector?"
@@ -1012,6 +1018,9 @@ msgid ""
 "Restrictions with the same description.\n"
 "\n"
 "Tip: Cross-check desired visibility of motions with test delegate account. "
+msgstr ""
+
+msgid "Can see origin motion"
 msgstr ""
 
 msgid "Can see participants"
@@ -3010,6 +3019,9 @@ msgstr ""
 msgid "Motion updated"
 msgstr ""
 
+msgid "Motion version"
+msgstr ""
+
 msgid "Motion votes"
 msgstr ""
 
@@ -3512,6 +3524,9 @@ msgstr ""
 msgid "Original version"
 msgstr ""
 
+msgid "Original version with all changes"
+msgstr ""
+
 msgid "Out of sync"
 msgstr ""
 
@@ -3757,6 +3772,9 @@ msgid "Prefix"
 msgstr ""
 
 msgid "Prefix for the motion identifier of amendments"
+msgstr ""
+
+msgid "Preload original motions"
 msgstr ""
 
 msgid "Presence"
@@ -4018,6 +4036,9 @@ msgid "Requires permission to manage lists of speakers"
 msgstr ""
 
 msgid "Requires permission to manage motion metadata"
+msgstr ""
+
+msgid "Requires permission to see origin motions"
 msgstr ""
 
 msgid "Reset"
@@ -4554,9 +4575,6 @@ msgstr ""
 msgid "Submitter"
 msgstr ""
 
-msgid "Submitter (in target meeting)"
-msgstr ""
-
 msgid "Submitter may set state to"
 msgstr ""
 
@@ -4630,6 +4648,9 @@ msgid "Tag"
 msgstr ""
 
 msgid "Tags"
+msgstr ""
+
+msgid "Target meeting"
 msgstr ""
 
 msgid "Text"
@@ -4793,6 +4814,9 @@ msgid "This action will remove you from one or more groups."
 msgstr ""
 
 msgid "This action will remove you from one or more meetings."
+msgstr ""
+
+msgid "This amendment has change recommendations."
 msgstr ""
 
 msgid "This ballot contains deleted users."
@@ -5474,6 +5498,12 @@ msgstr ""
 msgid "already exists"
 msgstr ""
 
+msgid "amendment"
+msgstr ""
+
+msgid "amendments"
+msgstr ""
+
 msgid "analog"
 msgstr ""
 
@@ -5493,6 +5523,15 @@ msgid "by"
 msgstr ""
 
 msgid "challenged you to a chess match!"
+msgstr ""
+
+msgid "change recommendation"
+msgstr ""
+
+msgid "change recommendations"
+msgstr ""
+
+msgid "committee name"
 msgstr ""
 
 msgid "committee-example"
@@ -5672,6 +5711,12 @@ msgstr ""
 msgid "or"
 msgstr ""
 
+msgid "original identifier"
+msgstr ""
+
+msgid "original submitter"
+msgstr ""
+
 msgid "outside"
 msgstr ""
 
@@ -5760,6 +5805,9 @@ msgid "will be imported"
 msgstr ""
 
 msgid "will be updated"
+msgstr ""
+
+msgid "without identifier"
 msgstr ""
 
 msgid "yellow"
