--- a/AUTHORS
+++ b/AUTHORS
@@ -47,3 +47,4 @@ Authors of OpenSlides in chronological order of first contribution:
     Danny Reichelt <dreichelt@intevation.de>
     Hannes Janott <hannes.janott@openslides.com>
     Annalena Bebenroth <annalena.bebenroth@intevation.de>
+    Viktoriia Krasnovyd <viktoriia.krasnovyd@intevation.de>
