Dedicated Test-Script & Dev Folder

--- a/AUTHORS
+++ b/AUTHORS
@@ -48,3 +48,4 @@ Authors of OpenSlides in chronological order of first contribution:
     Hannes Janott <hannes.janott@openslides.com>
     Annalena Bebenroth <annalena.bebenroth@intevation.de>
     Viktoriia Krasnovyd <viktoriia.krasnovyd@intevation.de>
+    Jan Malte Behrens <jan.malte.behrens@intevation.de>
