--- a/AUTHORS
+++ b/AUTHORS
@@ -49,3 +49,4 @@ Authors of OpenSlides in chronological order of first contribution:
     Annalena Bebenroth <annalena.bebenroth@intevation.de>
     Kasimir Klinger <kasimir.klinger@intevation.de>
     Viktoriia Krasnovyd <viktoriia.krasnovyd@intevation.de>
+    Jan Malte Behrens <jan.malte.behrens@intevation.de>
