--- a/patchnotes/4.2.15.md
+++ b/patchnotes/4.2.15.md
@@ -1,6 +1,6 @@
 ## Patchnotes 4.2.15
 
-### Security:
+### Security
 - Account / participant import: Superadmin accounts can no longer be edited via CSV import.
 
 ### New Features
