--- a/patchnotes/4.2.18.md
+++ b/patchnotes/4.2.18.md
@@ -1,7 +1,7 @@
 ## Patchnotes 4.2.18
 
 ### New Features
-- Live voting: During nominal votes in motions, individual votes can be projected while voting is in progress, so that it is possible to see live who voted how. The votes are grouped by structure level. In the settings, there is the option to set this as the default for nominal votes. When voting is stopped, the result can be anonymized immediately
+- Live voting: During nominal votes in motions, single votes can be projected while voting is in progress, so that it is possible to see live who voted how. The votes are grouped by structure level. In the settings, there is the option to set this as the default for nominal votes. When voting is stopped, the result can be anonymized immediately
 
 ### Optimizations
 - Accounts: You can search by home committee and external
