--- a/i18n/template-en.pot
+++ b/i18n/template-en.pot
@@ -24,12 +24,6 @@ msgstr ""
 msgid "100% base"
 msgstr ""
 
-msgid ""
-"<a href=\"https://openslides.com\">OpenSlides</a> is a free web based "
-"presentation and assembly system for visualizing and controlling agenda, "
-"motions and elections of an assembly."
-msgstr ""
-
 msgid "<unknown motion>"
 msgstr ""
 
@@ -380,6 +374,9 @@ msgid "Amount of accounts"
 msgstr ""
 
 msgid "Amount of meetings"
+msgstr ""
+
+msgid "Amount of motions"
 msgstr ""
 
 msgid "Amount of votes"
@@ -869,6 +866,9 @@ msgid ""
 "permissions."
 msgstr ""
 
+msgid "Can create, modify, start/stop and delete ballots."
+msgstr ""
+
 msgid "Can create, modify, start/stop and delete votings."
 msgstr ""
 
@@ -900,6 +900,9 @@ msgid ""
 msgstr ""
 
 msgid "Can manage agenda"
+msgstr ""
+
+msgid "Can manage ballots"
 msgstr ""
 
 msgid "Can manage elections"
@@ -1276,9 +1279,6 @@ msgstr ""
 msgid "Chyron speaker, font color"
 msgstr ""
 
-msgid "Classic"
-msgstr ""
-
 msgid "Clear"
 msgstr ""
 
@@ -1382,6 +1382,9 @@ msgid "Committee management"
 msgstr ""
 
 msgid "Committee managers"
+msgstr ""
+
+msgid "Committee name"
 msgstr ""
 
 msgid "Committees"
@@ -1499,6 +1502,9 @@ msgid "Current slide"
 msgstr ""
 
 msgid "Current speaker"
+msgstr ""
+
+msgid "Current speaker / structure level"
 msgstr ""
 
 msgid "Current speaker chyron"
@@ -1764,11 +1770,9 @@ msgid "Duration of requests to speak"
 msgstr ""
 
 msgid ""
-"During non-nominal voting OpenSlides does NOT store the individual user ID "
-"of the voter. This in no way means that a non-nominal vote is completely "
-"anonymous and secure. The votes cannot track their individual votes after "
-"the data has been submitted. The validity of the data cannot always be "
-"guaranteed."
+"During non-nominal voting, OpenSlides does NOT store the individual user IDs "
+"of voters in connection with the votes cast. Once the data has been "
+"transmitted, voters can no longer track or check their own votes."
 msgstr ""
 
 msgid "Edit"
@@ -2187,6 +2191,9 @@ msgid "Forspeech"
 msgstr ""
 
 msgid "Forward"
+msgstr ""
+
+msgid "Forward attachments"
 msgstr ""
 
 msgid "Forward motions"
@@ -2987,9 +2994,6 @@ msgstr ""
 msgid "Moderation-Note"
 msgstr ""
 
-msgid "Modern"
-msgstr ""
-
 msgid "Modify design"
 msgstr ""
 
@@ -3212,6 +3216,9 @@ msgstr ""
 msgid "New password"
 msgstr ""
 
+msgid "New poll"
+msgstr ""
+
 msgid "New projector"
 msgstr ""
 
@@ -3347,6 +3354,9 @@ msgstr ""
 msgid "Not locked out"
 msgstr ""
 
+msgid "Note on secret voting"
+msgstr ""
+
 msgid ""
 "Note, that the default password will be changed to the new generated one."
 msgstr ""
@@ -3475,6 +3485,9 @@ msgstr ""
 msgid "Only available for nominal voting"
 msgstr ""
 
+msgid "Only for committee admins"
+msgstr ""
+
 msgid "Only for internal notes."
 msgstr ""
 
@@ -3494,6 +3507,9 @@ msgid "Only time"
 msgstr ""
 
 msgid "Only traffic light"
+msgstr ""
+
+msgid "Open"
 msgstr ""
 
 msgid "Open Jitsi in new tab"
@@ -3571,6 +3587,12 @@ msgid "Origin motion deleted"
 msgstr ""
 
 msgid "Original"
+msgstr ""
+
+msgid "Original identifier"
+msgstr ""
+
+msgid "Original submitter"
 msgstr ""
 
 msgid "Original version"
@@ -4229,13 +4251,7 @@ msgstr ""
 msgid "Search player"
 msgstr ""
 
-msgid "Searching for candidates"
-msgstr ""
-
 msgid "Searching for players ..."
-msgstr ""
-
-msgid "Secret voting can not be guaranteed"
 msgstr ""
 
 msgid "Select"
@@ -5370,6 +5386,17 @@ msgstr ""
 msgid "What is new?"
 msgstr ""
 
+msgid ""
+"When hosted by Intevation GmbH, secret, legally compliant voting is ensured "
+"by organizational measures (see legal opinion)."
+msgstr ""
+
+msgid ""
+"When self-hosted, OpenSlides cannot guarantee that the requirements for "
+"legally compliant, secret voting are met. Responsibility for this lies with "
+"the server operator."
+msgstr ""
+
 msgid "Which version?"
 msgstr ""
 
@@ -5391,6 +5418,9 @@ msgid ""
 msgstr ""
 
 msgid "Withdraw point of order"
+msgstr ""
+
+msgid "Without identifier"
 msgstr ""
 
 msgid "Workflow"
@@ -5631,9 +5661,6 @@ msgstr ""
 msgid "change recommendations"
 msgstr ""
 
-msgid "committee name"
-msgstr ""
-
 msgid "committee-example"
 msgstr ""
 
@@ -5829,12 +5856,6 @@ msgstr ""
 msgid "or"
 msgstr ""
 
-msgid "original identifier"
-msgstr ""
-
-msgid "original submitter"
-msgstr ""
-
 msgid "outside"
 msgstr ""
 
@@ -5883,6 +5904,9 @@ msgstr ""
 msgid "short running"
 msgstr ""
 
+msgid "single-line"
+msgstr ""
+
 msgid "started"
 msgstr ""
 
@@ -5901,7 +5925,7 @@ msgstr ""
 msgid "today"
 msgstr ""
 
-msgid "total"
+msgid "two-line"
 msgstr ""
 
 msgid "undocumented"
@@ -5937,7 +5961,7 @@ msgstr ""
 msgid "with"
 msgstr ""
 
-msgid "without identifier"
+msgid "without structure level"
 msgstr ""
 
 msgid "yellow"
