--- a/AUTHORS
+++ b/AUTHORS
@@ -50,3 +50,4 @@ Authors of OpenSlides in chronological order of first contribution:
     Kasimir Klinger <kasimir.klinger@intevation.de>
     Viktoriia Krasnovyd <viktoriia.krasnovyd@intevation.de>
     Jan Malte Behrens <jan.malte.behrens@intevation.de>
+    Alexej Antoni <alexej.antoni@intevation.de>
