--- a/patchnotes/4.2.23.md
+++ b/patchnotes/4.2.23.md
@@ -18,3 +18,4 @@
 ### Bug Fixes
 - Motions > Amendments: An amendment with change recommendations is displayed in full in the diff version.
 - Motions > Export: The page break in the table of contents has been removed if only motions without categories are exported.
+- The connections to the server are now being checked and closed if necessary.
