Update patchnotes for version 4.2.25

--- a/patchnotes/4.2.25.md
+++ b/patchnotes/4.2.25.md
@@ -4,7 +4,7 @@
 - Motions > Amendment recommendations: New function for extending and shortening existing change recommendations integrated.
 
 ### Optimizations
-- Improved accessibility for screen readers: Improved structure on the autopilot, user profile, and presence display.
+- Improved accessibility for screen readers: Improved structure on the autopilot, user profile, presence display, and polls.
 - User profile: Presence indicator optimized. When presence is activated, it is displayed with a check mark to the left of the profile name.
 - Deletion concept for participants: Users who were registered as submitters, editors, or spokespersons and have been deleted are listed in the fields as “Deleted users.”
 - Authentication: The server time is used to check the expiration date of authentication tokens.
