--- a/AUTHORS
+++ b/AUTHORS
@@ -51,3 +51,4 @@ Authors of OpenSlides in chronological order of first contribution:
     Viktoriia Krasnovyd <viktoriia.krasnovyd@intevation.de>
     Jan Malte Behrens <jan.malte.behrens@intevation.de>
     Alexej Antoni <alexej.antoni@intevation.de>
+    Javier Borrego Narváez <javier.borrego@intevation.de>
